Updated command usage